# ergo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ergo.h  main.cpp
src/action/: action.cpp  action.h
src/operation/: operation.cpp  operation.h
src/task/: task.cpp  task.h
